# mujoco_test

./: CMakeLists.txt
RGB/: mujoco_rgbd_camera.cpp  mujoco_rgbd_camera.hpp  two_window.cpp
courseCode/: 00-hello.cc  01-ball.cc  02-pendulum.cpp  03-doublependulum.cpp  04-doublependulum_fsm.cpp  05-doublependulum_ik.cpp  06-dbpendulum_lqr.cpp  07-hybrid_pendulum.cpp
simulate+/: CMakeLists.txt  main.cpp  simulate.cc  simulate.h
simulate+/glad/: CMakeLists.txt
simulate+/glad/include/glad/: glad.h
simulate+/glad/src/: glad.c
simulate+/imgui/: CMakeLists.txt
